src/math.zig

pub extern fn hex_number_64bit(str: [*c]u8) c_ulonglong;
pub extern fn hex_number_32bit(str: [*c]u8) c_uint;
pub extern fn hex_number_8bit(str: [*c]u8) c_int;
pub extern fn oct_number(str: [*c]u8) c_int;
pub extern fn unicode_8_bit(str: [*c]u8, out: [*c]u8) c_int;
pub extern fn unicode_12_bit(str: [*c]u8, out: [*c]u8) c_int;
pub extern fn unicode_16_bit(str: [*c]u8, out: [*c]u8) c_int;
pub extern fn unicode_20_bit(str: [*c]u8, out: [*c]u8) c_int;
pub extern fn unicode_21_bit(str: [*c]u8, out: [*c]u8) c_int;
pub extern fn utime() c_ulonglong;
pub extern fn get_time(ses: [*c]struct_session, str: [*c]u8) time_t;
pub extern fn str_time(ses: [*c]struct_session, format: [*c]u8, time: time_t) [*c]u8;
pub extern fn generate_rand(ses: [*c]struct_session) c_ulonglong;
pub extern fn seed_rand(ses: [*c]struct_session, seed: c_ulonglong) void;
pub extern fn capitalize(str: [*c]u8) [*c]u8;
pub extern fn decapitalize(str: [*c]u8) [*c]u8;
pub extern fn ftos(number: f64) [*c]u8;
pub extern fn ntos(number: c_longlong) [*c]u8;
pub extern fn indent_one(len: c_int) [*c]u8;
pub extern fn indent(len: c_int) [*c]u8;
pub extern fn cat_sprintf(dest: [*c]u8, fmt: [*c]u8, ...) c_int;
pub extern fn ins_sprintf(dest: [*c]u8, fmt: [*c]u8, ...) void;
pub extern fn is_suffix(str1: [*c]u8, str2: [*c]u8) c_int;
pub extern fn big5toutf8_info(ses: [*c]struct_session) void;
pub extern fn utf8tobig5_info(ses: [*c]struct_session) void;
pub extern fn get_ascii_width(str: [*c]u8, width: [*c]c_int) c_int;
pub extern fn is_utf8_head(str: [*c]u8) c_int;
pub extern fn is_utf8_tail(str: [*c]u8) c_int;
pub extern fn get_utf8_size(str: [*c]u8) c_int;
pub extern fn get_utf8_width(str: [*c]u8, width: [*c]c_int, index: [*c]c_int) c_int;
pub extern fn get_utf8_index(str: [*c]u8, index: [*c]c_int) c_int;
pub extern fn unicode_to_utf8(index: c_int, out: [*c]u8) c_int;
pub extern fn utf8_strlen(str: [*c]u8, width: [*c]c_int) c_int;
pub extern fn utf8_to_all(ses: [*c]struct_session, in: [*c]u8, out: [*c]u8, size: c_int) c_int;
pub extern fn all_to_utf8(ses: [*c]struct_session, in: [*c]u8, out: [*c]u8) c_int;
pub extern fn cp1251_to_utf8(input: [*c]u8, output: [*c]u8) c_int;
pub extern fn utf8_to_cp1251(input: [*c]u8, output: [*c]u8) c_int;
pub extern fn iso1_to_utf8(input: [*c]u8, output: [*c]u8) c_int;
pub extern fn utf8_to_iso1(input: [*c]u8, output: [*c]u8) c_int;
pub extern fn iso2_to_utf8(input: [*c]u8, output: [*c]u8) c_int;
pub extern fn utf8_to_iso2(input: [*c]u8, output: [*c]u8) c_int;
pub extern fn koi8_to_utf8(input: [*c]u8, output: [*c]u8) c_int;
pub extern fn utf8_to_koi8(input: [*c]u8, output: [*c]u8) c_int;
pub extern fn fansi_to_utf8(input: [*c]u8, output: [*c]u8) c_int;
pub extern fn is_euc_head(ses: [*c]struct_session, str: [*c]u8) c_int;
pub extern fn get_euc_size(ses: [*c]struct_session, str: [*c]u8) c_int;
pub extern fn get_euc_width(ses: [*c]struct_session, str: [*c]u8, width: [*c]c_int) c_int;
pub extern fn is_big5(str: [*c]u8) c_int;
pub extern fn big5_to_utf8(input: [*c]u8, output: [*c]u8) c_int;
pub extern fn utf8_to_big5(input: [*c]u8, output: [*c]u8) c_int;
pub extern fn is_gbk1(str: [*c]u8) c_int;
pub extern fn gbk1_to_utf8(input: [*c]u8, output: [*c]u8) c_int;
pub extern fn utf8_to_gbk1(input: [*c]u8, output: [*c]u8, length: c_int) c_int;
pub extern fn is_cp949(str: [*c]u8) c_int;
pub extern fn cp949_to_utf8(input: [*c]u8, output: [*c]u8) c_int;
pub extern fn utf8_to_cp949(input: [*c]u8, output: [*c]u8) c_int;
pub extern fn do_replace(ses: [*c]struct_session, arg: [*c]u8, arg1: [*c]u8, arg2: [*c]u8, arg3: [*c]u8, arg4: [*c]u8) [*c]struct_session;
pub extern fn get_variable_def(ses: [*c]struct_session, @"var": [*c]u8, def: [*c]u8) [*c]u8;
pub extern fn valid_variable(ses: [*c]struct_session, arg: [*c]u8) c_int;
pub extern fn string_raw_str_len(ses: [*c]struct_session, str: [*c]u8, start: c_int, end: c_int) c_int;
pub extern fn string_str_raw_len(ses: [*c]struct_session, str: [*c]u8, start: c_int, end: c_int) c_int;
pub extern fn translate_color_names(ses: [*c]struct_session, string: [*c]u8, result: [*c]u8) c_int;
pub extern fn get_color_names(ses: [*c]struct_session, htype: [*c]u8, result: [*c]u8) c_int;
pub extern fn lowerstring(str: [*c]u8) void;
pub extern fn upperstring(str: [*c]u8) void;
pub extern fn numbertocharacter(ses: [*c]struct_session, str: [*c]u8) void;
pub extern fn charactertonumber(ses: [*c]struct_session, str: [*c]u8) void;
pub extern fn delete_variable(ses: [*c]struct_session, variable: [*c]u8) c_int;
pub extern fn justify_string(ses: [*c]struct_session, in: [*c]u8, out: [*c]u8, @"align": c_int, cut: c_int) void;
pub extern fn format_string(ses: [*c]struct_session, format: [*c]u8, arg: [*c]u8, out: [*c]u8) void;
pub extern fn search_variable(ses: [*c]struct_session, variable: [*c]u8) [*c]struct_listnode;
pub extern fn get_variable(ses: [*c]struct_session, variable: [*c]u8, result: [*c]u8) [*c]struct_listnode;
pub extern fn set_variable(ses: [*c]struct_session, variable: [*c]u8, format: [*c]u8, ...) [*c]struct_listnode;
pub extern fn init_pos(ses: [*c]struct_session, row: c_int, col: c_int) void;
pub extern fn hide_cursor(ses: [*c]struct_session) void;
pub extern fn show_cursor(ses: [*c]struct_session) void;
pub extern fn save_pos(ses: [*c]struct_session) void;
pub extern fn goto_pos(ses: [*c]struct_session, row: c_int, col: c_int) void;
pub extern fn restore_pos(ses: [*c]struct_session) void;
pub extern fn erase_cols(cnt: c_int) void;
pub extern fn reset(ses: [*c]struct_session) void;
pub extern fn scroll_region(ses: [*c]struct_session, top: c_int, bottom: c_int) void;
pub extern fn reset_scroll_region(ses: [*c]struct_session) void;
pub extern fn find_color_code(str: [*c]u8) c_int;
pub extern fn find_escaped_color_code(str: [*c]u8) c_int;
pub extern fn find_secure_color_code(str: [*c]u8) c_int;
pub extern fn get_vt102_width(ses: [*c]struct_session, str: [*c]u8, width: [*c]c_int) c_int;
pub extern fn strip_vt102_width(ses: [*c]struct_session, str: [*c]u8, width: [*c]c_int) c_int;
pub extern fn skip_vt102_codes(str: [*c]u8) c_int;
pub extern fn skip_vt102_codes_non_graph(str: [*c]u8) c_int;
pub extern fn strip_vt102_codes(str: [*c]u8, buf: [*c]u8) c_int;
pub extern fn strip_vt102_codes_non_graph(str: [*c]u8, buf: [*c]u8) void;
pub extern fn strip_non_vt102_codes(str: [*c]u8, buf: [*c]u8) void;
pub extern fn get_color_codes(old: [*c]u8, str: [*c]u8, buf: [*c]u8, flags: c_int) void;
pub extern fn strip_vt102_strlen(ses: [*c]struct_session, str: [*c]u8) c_int;
pub extern fn strip_color_strlen(ses: [*c]struct_session, str: [*c]u8) c_int;
pub extern fn strip_vt102_strstr(str: [*c]u8, buf: [*c]u8, len: [*c]c_int) [*c]u8;
pub extern fn interpret_vt102_codes(ses: [*c]struct_session, str: [*c]u8, real: c_int) c_int;
pub extern fn catch_vt102_codes(ses: [*c]struct_session, str: [*c]u8, cplen: c_int) c_int;
pub export var math_head: [*c]struct_math_node = @import("std").mem.zeroes([*c]struct_math_node);
pub export var math_tail: [*c]struct_math_node = @import("std").mem.zeroes([*c]struct_math_node);
pub export var mathnode_s: [*c]struct_math_node = @import("std").mem.zeroes([*c]struct_math_node);
pub export var mathnode_e: [*c]struct_math_node = @import("std").mem.zeroes([*c]struct_math_node);
pub export var precision: c_int = @import("std").mem.zeroes(c_int);
pub export var wonky: c_int = @import("std").mem.zeroes(c_int);
pub export fn mathexp_level(arg_ses: [*c]struct_session, arg_node: [*c]struct_math_node) void {
    var ses = arg_ses;
    _ = &ses;
    var node = arg_node;
    _ = &node;
    var priority: c_int = undefined;
    _ = &priority;
    var lowest: c_int = undefined;
    _ = &lowest;
    mathnode_e = node;
    while (node.*.prev != null) {
        if (@as(c_int, @bitCast(@as(c_uint, node.*.prev.*.level))) < @as(c_int, @bitCast(@as(c_uint, node.*.level)))) {
            break;
        }
        node = node.*.prev;
    }
    mathnode_s = node;
    {
        priority = 0;
        while (priority < @as(c_int, 14)) : (priority = lowest) {
            lowest = 14;
            {
                node = mathnode_s;
                while (node != null) : (node = node.*.next) {
                    if (@as(c_int, @bitCast(@as(c_uint, node.*.priority))) == priority) {
                        mathexp_compute(ses, node);
                    } else if (@as(c_int, @bitCast(@as(c_uint, node.*.priority))) < lowest) {
                        lowest = @as(c_int, @bitCast(@as(c_uint, node.*.priority)));
                    }
                    if (node == mathnode_e) {
                        break;
                    }
                }
            }
        }
    }
    node = mathnode_s;
    while ((node.*.prev != null) and (node.*.next != null)) {
        if ((@as(c_int, @bitCast(@as(c_uint, node.*.prev.*.priority))) == @as(c_int, 15)) and (@as(c_int, @bitCast(@as(c_uint, node.*.next.*.priority))) == @as(c_int, 15))) {
            node.*.level = node.*.next.*.level;
            del_math_node(node.*.next);
            del_math_node(node.*.prev);
        } else {
            break;
        }
    }
    return;
}
